style fixes part 1
1. make background color very dark grey
2. remove opacity setting from header, it just makes the colors look washed out and weird

--- a/html/controls/pt/ptcolor.html
+++ b/html/controls/pt/ptcolor.html
@@ -18,7 +18,7 @@
 			<thead>
 				<tr>
 					<td>#</td>
-					<td colspan="9" id="head1" style="opacity: .7;">PENALTY / JAM #</td>
+					<td colspan="9" id="head1">PENALTY / JAM #</td>
 					<td>FO/EXP</td>
 					<td>TOTAL</td>
 				</tr>
@@ -30,7 +30,7 @@
 			<thead>
 				<tr>
 					<td>#</td>
-					<td colspan="9" id="head2" style="opacity: .7;">PENALTY / JAM #</td>
+					<td colspan="9" id="head2">PENALTY / JAM #</td>
 					<td>FO/EXP</td>
 					<td>TOTAL</td>
 				</tr>
