add auto-height pt sheet to homepage

--- a/html/index.html
+++ b/html/index.html
@@ -111,6 +111,7 @@ function showOverlays() {
           <h2><span class="fa fa-2x fa-list-alt"></span> PENALTY TRACKING</h2>
           <ul>
             <li><a href="controls/pt/">Penalty Tracking</a></li>
+            <li><a href="controls/pt/?autoFit=true">Penalty Tracking (Auto-Fit Rows)</a></li>
           </ul>
           <ul>
             <li><a href='views/wb/whiteboard.html'>Penalty Whiteboard Display<span class="pill pill-beta">BETA</span></a></li>
