Add an explicit place to put custom screens.
As it stands there's nowhere official to put these, and
you have to know what's installed. By using the index rendering
feature of our webserver, we get a basic listing for free.

--- a/html/index.html
+++ b/html/index.html
@@ -132,6 +132,7 @@ function showOverlays() {
           <ul>
             <li><a href="controls/rulesets.html">Ruleset Editor</a></li>
             <li><a href="controls/media_management.html">Media Management</a></li>
+            <li><a href="custom/">Custom Screens</a></li>
             <li><a href="controls/twitter.html">Twitter Controls <span class="pill pill-beta">BETA</span></a></li>
             <li><a href="controls/stream.html">Load/Save Scoreboard "Stream" <span class="pill pill-beta">BETA</span></a></li>
           </ul>
