Improve usability of the lineup tracker screen
- Use roster numbers instead of skater names as main identifier
- Sort skaters by number by default
- Order positions as Jammer, Pivot, Blocker

--- a/html/controls/lineups.html
+++ b/html/controls/lineups.html
@@ -31,38 +31,38 @@
 				</th>
 			</tr>
 			<tr class="Header">
-				<th class="Name">Name</th>
 				<th class="Number">#</th>
+				<th class="Name">Name</th>
 				<th class="Bench">Bench</th>
+				<th class="Jammer">Jammer</th>
 				<th class="Pivot">Pivot</th>
 				<th class="Blocker">Blocker</th>
-				<th class="Jammer">Jammer</th>
 				<th class="Box">Box</th>
 			</tr>
 		</thead>
 		<tbody>
 			<tr class="Template">
-				<td class="Name"><a class="Name"></a></td>
 				<td class="Number"><a class="Number"></a></td>
+				<td class="Name"><a class="Name"></a></td>
 				<td class="Bench Position">
 					<a class="Bench">Bench</a>
-					<a class="Name"></a>
-				</td>
-				<td class="Pivot Position">
-					<a class="Pivot">Pivot</a>
-					<a class="Name"></a>
-				</td>
-				<td class="Blocker Position">
-					<a class="Blocker">Blocker</a>
-					<a class="Name"></a>
+					<a class="Number"></a>
 				</td>
 				<td class="Jammer Position">
 					<a class="Jammer">Jammer</a>
-					<a class="Name"></a>
+					<a class="Number"></a>
+				</td>
+				<td class="Pivot Position">
+					<a class="Pivot">Pivot</a>
+					<a class="Number"></a>
+				</td>
+				<td class="Blocker Position">
+					<a class="Blocker">Blocker</a>
+					<a class="Number"></a>
 				</td>
 				<td class="Box">
 					<a class="Box">Box</a>
-					<a class="Name"></a>
+					<a class="Number"></a>
 				</td>
 			</tr>
 		</tbody>
