switch to single button undo

--- a/html/controls/mobile.html
+++ b/html/controls/mobile.html
@@ -120,6 +120,7 @@
 			</div>
 		</div>
 		<button class="Timeout" data-role="button">Timeout</button>
+		<button class="Undo" data-role="button">Undo</button>
 		<div class="ui-grid-b Timeout">
 			<div class="ui-block-a"><button class="Team1">
 				TO 
