Overhaul jam & timeout controls (#155)
* change timeout interface

- Official timeouts get their own button
- Selecting a timeout type during a running timeout will change the type
(and credit back the timout to the previous owner, if applicable)
- Pressing the "Timeout" button again will start a new timeout
- Team Timeout buttons are labelled "Team TO" instead of "Timeout"

* switch to single button undo

* make jam control buttons display current function

on main operator screen and mobile operator control

--- a/html/controls/mobile.html
+++ b/html/controls/mobile.html
@@ -113,13 +113,14 @@
 		<div class="TimeoutTime Time"><h2>TIMEOUT Time</h2><a class="Time"></a></div>
 		<div class="ui-grid-a">
 			<div class="ui-block-a">
-				<button class="StartJam" data-role="button" data-icon="check" data-iconpos="right">Start Jam</button>
+				<button class="StartJam" data-role="button" data-icon="check" data-iconpos="right"><span class="StartLabel Label">Start Jam</span></button>
 			</div>
 			<div class="ui-block-b">
-				<button class="StopJam" data-role="button" data-icon="delete" data-iconpos="left">Stop Jam/TO</button>
+				<button class="StopJam" data-role="button" data-icon="delete" data-iconpos="left"><span class="StopLabel Label">Stop Jam/TO</span></button>
 			</div>
 		</div>
-		<button class="Timeout" data-role="button">Timeout</button>
+		<button class="Timeout" data-role="button"><span class="TimeoutLabel Label">Timeout</span></button>
+		<button class="Undo" data-role="button"><span class="UndoLabel Label">Undo</span></button>
 		<div class="ui-grid-b Timeout">
 			<div class="ui-block-a"><button class="Team1">
 				TO 
