Address problems reported in 3.9.5 release build
- #157 will be fixed on future zip builds
- fixes #159
- #158 needs a rebuild of the scoreboardWindows.exe, which my Linux
system won't do.
- also updated README.md to reflect the changes in 3.9.5 and copied
those changes to the wiki

--- a/start.html
+++ b/start.html
@@ -60,7 +60,7 @@ Checking if the scoreboard is running...
 <p id="NotStarted" >
 <b>It appears the CRG ScoreBoard is not running - this page will automatically update once you start the scoreboard.</b>
 <br/>
-Please check the instructions in the <a href="README">README</a> file on how to start the scoreboard.
+Please check the instructions in the <a href="README.md">README</a> file on how to start the scoreboard.
 </p>
 
 <p id="Started" >
