Move Media into the ScoreBoard and use inotify.
This means that we won't be polling these directories
every 10 seconds, and will spot changes ~instantly.
This also makes the unittests a bit faster, as the
FileAlterationManager setup took a while.

On the media management page, don't allow Source to
be changed - that never name sense.
Also remove Name option for upload, it never worked.
This page is still using XML rather than WS.

Remove /Media/download endpoint, it's unused.
Remove one more property from crg.scoreboard.properties.

--- a/html/controls/media_management.html
+++ b/html/controls/media_management.html
@@ -20,9 +20,9 @@
 
 <div id="tabsDiv">
 	<ul id="tabBar">
-		<li><a href="#Images">Image</a></li>
-		<li><a href="#Videos">Video</a></li>
-		<li><a href="#CustomHtml">Custom Page</a></li>
+		<li><a href="#images">Image</a></li>
+		<li><a href="#videos">Video</a></li>
+		<li><a href="#customhtml">Custom Page</a></li>
 	</ul>
 </div>
 
@@ -55,7 +55,7 @@
 		<tr class="ItemTemplate">
 			<td class="Remove"><button class="Remove">Remove</button></td>
 			<td class="Name"><input class="Name" type="text"/></td>
-			<td class="Src"><input class="Src" type="text"/></td>
+			<td class="Src"><span class="Src"/></td>
 			<td class="Preview"></td>
 		</tr>
 	</tbody>
@@ -74,7 +74,6 @@
 <div class="UploadMediaDialog DialogTemplate">
 	<p><div class="Upload"></div></p>
 	<p><a class="File">File:</a><input class="File" type="file" multiple/></p>
-	<p><a class="Name">Name:</a><input class="Name" type="text" size="40"/></p>
 	<p><a class="Status"></a></p>
 </div>
 
