--- a/html/controls/lineups.html
+++ b/html/controls/lineups.html
@@ -31,39 +31,39 @@
 				</th>
 			</tr>
 			<tr class="Header">
-				<th class="Number">#</th>
-				<th class="Name">Name</th>
-				<th class="Bench">Bench</th>
-				<th class="Jammer">Jammer</th>
-				<th class="Pivot">Pivot</th>
-				<th class="Blocker">Blocker</th>
-				<th class="Box">Box</th>
+				<th class="Number"></th>
+				<th class="Bench"></th>
+				<th class="Jammer"></th>
+				<th class="Pivot"></th>
+				<th class="Blocker"></th>
+				<th class="Box"></th>
+				<th class="Trips"></th>
 			</tr>
 		</thead>
 		<tbody>
 			<tr class="Template">
 				<td class="Number"><a class="Number"></a></td>
-				<td class="Name"><a class="Name"></a></td>
 				<td class="Bench Position">
 					<a class="Bench">Bench</a>
 					<a class="Number"></a>
 				</td>
 				<td class="Jammer Position">
-					<a class="Jammer">Jammer</a>
+					<a class="Jammer">J</a>
 					<a class="Number"></a>
 				</td>
 				<td class="Pivot Position">
-					<a class="Pivot">Pivot</a>
+					<a class="Pivot">P</a>
 					<a class="Number"></a>
 				</td>
 				<td class="Blocker Position">
-					<a class="Blocker">Blocker</a>
+					<a class="Blocker">B</a>
 					<a class="Number"></a>
 				</td>
 				<td class="Box">
 					<a class="Box">Box</a>
 					<a class="Number"></a>
 				</td>
+				<td class="Trips"><a class="Trips"></a></td>
 			</tr>
 		</tbody>
 	</table>
