complete plt screen

--- a/html/controls/lt/lt.html
+++ b/html/controls/lt/lt.html
@@ -19,15 +19,15 @@
 		</div>
 		<div class="FieldingEditor">
 			<table>
-				<tr>
+				<tr class="Skater">
 					<td><select id="skater"><option value="">None/Unknown</option></td>
 					<td><input type="checkbox" id="notFielded">No Skater fielded</td>
 					<td><input type="checkbox" id="sitFor3">Sit out next 3</td>
 				</tr>
-				<tr><td colspan="3" class="tripHeader">Box Trips</td></tr>
-				<tr><td class="tripHeader">Start</td><td class="tripHeader">End</td><td></td></tr>
+				<tr class="tripHeader"><td colspan="2">Box Trips</td><td></td></tr>
+				<tr class="tripHeader"><td>Start</td><td>End</td><td></td></tr>
 				<tr id="tripFooter"><td><button id="addTrip">Add Box Trip</button></td><td></td>
-					<td><button id="close">Close</button></td></td></tr>
+					<td class="Col3"><button id="close">Close</button></td></td></tr>
 			</table>
 		</div>
 	</body>
