--- a/html/controls/plt/plt.html
+++ b/html/controls/plt/plt.html
@@ -21,16 +21,17 @@
 					<td>Jammer</td>
 					<td>Pivot</td>
 					<td>Blocker</td>
-					<td>Box</td>
+					<td colspan="2">Box</td>
 					<td>#</td>
 					<td colspan="9" id="head">PENALTY / JAM #</td>
-					<td>FO/EXP</td>
-					<td>TOTAL</td>
+					<td>FO/Ex</td>
+					<td>Total</td>
 				</tr>
 			</thead>
 			<tbody>
 			</tbody>
 		</table>
+		<iframe id="lt" width="100%"></iframe>
 		<div class="PenaltyEditor">
 			<table width="80%">
 				<tr>
