add PLT screen to the index page

--- a/html/index.html
+++ b/html/index.html
@@ -114,6 +114,10 @@ function showOverlays() {
             <li><a href="controls/pt/?autoFit=true">Penalty Tracking (Auto-Fit Rows)</a></li>
           </ul>
           <ul>
+            <li><a href="controls/plt/?team=1">Penalty + Lineup Tracking (Team 1)</a></li>
+            <li><a href="controls/plt/?team=2">Penalty + Lineup Tracking (Team 2)</a></li>
+          </ul>
+          <ul>
             <li><a href='views/wb/whiteboard.html'>Penalty Whiteboard Display<span class="pill pill-beta">BETA</span></a></li>
             <li><a href='views/wb/tcdg2016wb.html'>TCDG16 Penalty Graphics Display</a></li>
           </ul>
