Remove old scoreboard.
The WS scoreboard is now feature-equivilent.

Remove minimal animations option, it does
nothing for WS.

--- a/html/index.html
+++ b/html/index.html
@@ -94,15 +94,9 @@ function showOverlays() {
           </ul>
         </div>
         <div class="btn">
-          <h2><span class="fa fa-2x fa-desktop"></span> SCOREBOARD DISPLAYS</h2>
+          <h2><span class="fa fa-2x fa-desktop"></span> SCOREBOARD DISPLAY</h2>
           <ul>
-            <li><a href="views/scoreboard.html"><strong>Main Scoreboard (Legacy)</strong></a></li>
-            <li><a href="views/scoreboard.html?ani=min" title="Use for lower performance machines">Minimal Animations</a></li>
-          </ul>
-          
-          <ul>
-            <li><a href="views/standard/"><strong>Main Scoreboard (Websocket/JSON)</strong></a></li>
-              <li><a href="views/standard?ani=min">Minimal Animations</a></li>
+            <li><a href="views/standard/"><strong>Main Scoreboard</strong></a></li>
           </ul>
         </div>
     </div><!-- column -->
