Replace PT/LT/WB screens by screens based on PLT
Using the same code for all of these screens will make maintenance a lot
easier.

--- a/html/controls/lt/index.html
+++ b/html/controls/lt/index.html
@@ -2,7 +2,7 @@
 <html>
 	<head>
 		<meta charset="utf-8"/>
-		<title>Penalty Lineup Tracker</title>
+		<title>Lineup Tracker</title>
 		<!--
 		 Copyright (C) 2008-2012 Mr Temper <MrTemper@CarolinaRollergirls.com>
 		
@@ -13,8 +13,8 @@
 		-->
 		<script type="text/javascript" src="/external/jquery/jquery.js"></script>
 		<script type="text/javascript" src="/json/core.js"></script>
-		<script type="text/javascript" src="plt.js"></script>
-		<script type="text/javascript" src="../lt/lt.js"></script>
+		<script type="text/javascript" src="/controls/plt/plt.js"></script>
+		<script type="text/javascript" src="lt.js"></script>
 	</head>
 	<body>
 		<div id="plt"></div>
