--- a/html/index.html
+++ b/html/index.html
@@ -89,7 +89,6 @@ function showOverlays() {
           <h2><span class="fa fa-2x fa-gamepad"></span> OPERATOR &amp CONTROLS</h2>
           <ul>
             <li><a href="controls/operator.html"><strong>Scoreboard Operator Panel</strong></a></li>
-            <li><a href="controls/lineups.html">Scoreboard Assistant (Lineup Tracking)</a></li>
             <li><a href="controls/mobile.html">Jam Timer (Mobile Control)</a></li>
           </ul>
         </div>
@@ -102,18 +101,20 @@ function showOverlays() {
     </div><!-- column -->
     <div class="column">
         <div class="btn">
-          <h2><span class="fa fa-2x fa-list-alt"></span> PENALTY TRACKING</h2>
+          <h2><span class="fa fa-2x fa-list-alt"></span> STATS TRACKING</h2>
           <ul>
             <li><a href="controls/pt/">Penalty Tracking</a></li>
-            <li><a href="controls/pt/?autoFit=true">Penalty Tracking (Auto-Fit Rows)</a></li>
+          </ul>
+          <ul>
+            <li><a href="controls/lt/?team=1">Lineup Tracking (Team 1)</a></li>
+            <li><a href="controls/lt/?team=2">Lineup Tracking (Team 2)</a></li>
           </ul>
           <ul>
             <li><a href="controls/plt/?team=1">Penalty + Lineup Tracking (Team 1)</a></li>
             <li><a href="controls/plt/?team=2">Penalty + Lineup Tracking (Team 2)</a></li>
           </ul>
           <ul>
-            <li><a href='views/wb/whiteboard.html'>Penalty Whiteboard Display<span class="pill pill-beta">BETA</span></a></li>
-            <li><a href='views/wb/tcdg2016wb.html'>TCDG16 Penalty Graphics Display</a></li>
+            <li><a href='views/wb'>Penalty Whiteboard Display</a></li>
           </ul>
         </div>
     </div><!-- column -->
