--- a/html/controls/pt/index.html
+++ b/html/controls/pt/index.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html>
 	<head>
+		<meta charset="utf-8"/>
 		<title>Penalty Tracker</title>
 		<!--
 		 Copyright (C) 2008-2012 Mr Temper <MrTemper@CarolinaRollergirls.com>
@@ -12,41 +13,11 @@
 		-->
 		<script type="text/javascript" src="/external/jquery/jquery.js"></script>
 		<script type="text/javascript" src="/json/core.js"></script>
+		<script type="text/javascript" src="/controls/plt/plt.js"></script>
 	</head>
 	<body>
-		<table class="Team Team1" cellpadding="0" cellspacing="0" border="1">
-			<thead>
-				<tr>
-					<td>#</td>
-					<td colspan="9" id="head1">PENALTY / JAM #</td>
-					<td>FO/EXP</td>
-					<td>TOTAL</td>
-				</tr>
-			</thead>
-			<tbody>
-			</tbody>
-		</table>
-		<table class="Team Team2" cellpadding="0" cellspacing="0" border="1">
-			<thead>
-				<tr>
-					<td>#</td>
-					<td colspan="9" id="head2">PENALTY / JAM #</td>
-					<td>FO/EXP</td>
-					<td>TOTAL</td>
-				</tr>
-			</thead>
-			<tbody>
-			</tbody>
-		</table>
-		<div class="PenaltyEditor">
-			<table width="80%">
-				<tr>
-					<td width="33%">Period: <button class="period_minus">-1</button> <select class="Period"></select> <button class="period_plus">+1</button></td>
-					<td width="33%">Jam: <button class="jam_minus">-1</button> <select class="Jam"></select> <button class="jam_plus">+1</button></td>
-					<td width="33%"><button class="clear">Clear</button></td>
-				</tr>
-			</table>
-			<div class="Codes"></div>
-		</div>
+		<div id="pt1" style="width: 50%; vertical-align:top; display: inline-block"></div><!-- 
+	 --><div id="pt2" style="width: 50%; vertical-align:top; display: inline-block"></div>
+		<div id="PenaltyEditor"></div>
 	</body>
 </html>
