--- a/html/controls/plt/index.html
+++ b/html/controls/plt/index.html
@@ -13,12 +13,12 @@
 		-->
 		<script type="text/javascript" src="/external/jquery/jquery.js"></script>
 		<script type="text/javascript" src="/json/core.js"></script>
-		<script type="text/javascript" src="plt.js"></script>
-		<script type="text/javascript" src="../lt/lt.js"></script>
+		<script type="text/javascript" src="plt-input.js"></script>
+		<script type="text/javascript" src="../lt/lt-sheet.js"></script>
 	</head>
 	<body>
-		<div id="plt"></div>
-		<div id="lt" width="100%"></div>
+		<div id="input"></div>
+		<div id="sheet" width="100%"></div>
 		<div id="PenaltyEditor"></div>
 		<div id="FieldingEditor"></div>
 	</body>
