--- a/html/controls/pt/index.html
+++ b/html/controls/pt/index.html
@@ -13,7 +13,7 @@
 		-->
 		<script type="text/javascript" src="/external/jquery/jquery.js"></script>
 		<script type="text/javascript" src="/json/core.js"></script>
-		<script type="text/javascript" src="/controls/plt/plt.js"></script>
+		<script type="text/javascript" src="/controls/plt/plt-input.js"></script>
 	</head>
 	<body>
 		<div id="pt1" style="width: 50%; vertical-align:top; display: inline-block"></div><!-- 
