Replace PT/LT/WB screens by screens based on PLT (#248)
* Replace PT/LT/WB screens by screens based on PLT

Using the same code for all of these screens will make maintenance a lot
easier.

--- a/html/controls/lt/index.html
+++ b/html/controls/lt/index.html
@@ -2,7 +2,7 @@
 <html>
 	<head>
 		<meta charset="utf-8"/>
-		<title>Penalty Tracker</title>
+		<title>Lineup Tracker</title>
 		<!--
 		 Copyright (C) 2008-2012 Mr Temper <MrTemper@CarolinaRollergirls.com>
 		
@@ -14,10 +14,12 @@
 		<script type="text/javascript" src="/external/jquery/jquery.js"></script>
 		<script type="text/javascript" src="/json/core.js"></script>
 		<script type="text/javascript" src="/controls/plt/plt-input.js"></script>
+		<script type="text/javascript" src="lt-sheet.js"></script>
 	</head>
 	<body>
-		<div id="pt1" style="width: 50%; vertical-align:top; display: inline-block"></div><!-- 
-	 --><div id="pt2" style="width: 50%; vertical-align:top; display: inline-block"></div>
+		<div id="input"></div>
+		<div id="sheet" width="100%"></div>
 		<div id="PenaltyEditor"></div>
+		<div id="FieldingEditor"></div>
 	</body>
 </html>
