--- a/html/controls/plt/index.html
+++ b/html/controls/plt/index.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html>
 	<head>
+		<meta charset="utf-8"/>
 		<title>Penalty Lineup Tracker</title>
 		<!--
 		 Copyright (C) 2008-2012 Mr Temper <MrTemper@CarolinaRollergirls.com>
@@ -12,12 +13,12 @@
 		-->
 		<script type="text/javascript" src="/external/jquery/jquery.js"></script>
 		<script type="text/javascript" src="/json/core.js"></script>
-		<script type="text/javascript" src="plt.js"></script>
-		<script type="text/javascript" src="../lt/lt.js"></script>
+		<script type="text/javascript" src="plt-input.js"></script>
+		<script type="text/javascript" src="../lt/lt-sheet.js"></script>
 	</head>
 	<body>
-		<div id="plt"></div>
-		<div id="lt" width="100%"></div>
+		<div id="input"></div>
+		<div id="sheet" width="100%"></div>
 		<div id="PenaltyEditor"></div>
 		<div id="FieldingEditor"></div>
 	</body>
