Link to the Copy endpoint, add instructions.

--- a/html/index.html
+++ b/html/index.html
@@ -109,6 +109,9 @@ function showOverlays() {
           <ul>
             <li><a href='views/wb'>Penalty Whiteboard Display</a></li>
           </ul>
+          <ul>
+            <li><a href='views/copy.html'>Copy to Statsbook</a></li>
+          </ul>
         </div>
     </div><!-- column -->
     <div class="column">
