Make nso mobile screens non-zoomable by default.
This avoids accidental zooming on touchscreens, and can
be changed if you happen to have a unusually small device.

--- a/html/nso/pt/index.html
+++ b/html/nso/pt/index.html
@@ -20,5 +20,6 @@
 		<div id="pt1" style="width: 50%; vertical-align:top; display: inline-block"></div><!-- 
 	 --><div id="pt2" style="width: 50%; vertical-align:top; display: inline-block"></div>
 		<div id="PenaltyEditor"></div>
+		<div id="OptionsDialog"></div>
 	</body>
 </html>
