--- a/html/controls/twitter_auth.html
+++ b/html/controls/twitter_auth.html
@@ -12,7 +12,7 @@
 
 <script type="text/javascript" src="/external/jquery/jquery.js"></script>
 
-<script type="text/javascript" src="/javascript/scoreboard.js"></script>
+<script type="text/javascript" src="/json/core.js"></script>
 
 </head>
 
