--- a/html/index.html
+++ b/html/index.html
@@ -128,7 +128,7 @@ function showOverlays() {
             <li><a href="controls/rulesets.html">Ruleset Editor</a></li>
             <li><a href="controls/media_management.html">Media Management</a></li>
             <li><a href="custom/">Custom Screens</a></li>
-            <li><a href="controls/twitter.html">Twitter Controls <span class="pill pill-beta">BETA</span></a></li>
+            <li><a href="controls/twitter.html">Twitter Controls</a></li>
           </ul>
         </div>
       </div><!-- column -->
