Switch media management to WS
Also make the example customhtml visible,
rather than black on black.

--- a/html/customhtml/fullscreen/example.html
+++ b/html/customhtml/fullscreen/example.html
@@ -12,6 +12,10 @@
 
 <style type="text/css">
 body>div { width: 100%; height: 100%; }
+body {
+  background-color: black;
+  color: white;
+}
 
 p { font-weight: bold; font-size: 300%; }
 
