--- a/html/controls/operator.html
+++ b/html/controls/operator.html
@@ -11,8 +11,14 @@
 -->
 
 <script type="text/javascript" src="/external/jquery/jquery.js"></script>
+<script type="text/javascript" src="/javascript/keycontrols.js"></script>
+<script type="text/javascript" src="/javascript/utils.js"></script>
+<script type="text/javascript" src="sk/sk-sheet.js"></script>
 
-<script type="text/javascript" src="/javascript/scoreboard.js"></script>
+<script type="text/javascript" src="/json/core.js"></script>
+
+<link rel="stylesheet" href="sk/sk-sheet.css" type="text/css" />
+
 
 </head>
 
