Reorganize HTML files
* Move components that are used by multiple screens (e.g. the sheets) to
a new /components folder.
* Place all input screens under /nso/<position>
* Place settings screens under /settings/<screen>
* We only have one overlay. Move it to /views/overlay, removing the
additional directory layer.

--- a/html/nso/lt/index.html
+++ b/html/nso/lt/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 	<head>
-		<title>Penalty Lineup Tracker</title>
+		<title>Lineup Tracker</title>
 		<!--
 		 Copyright (C) 2008-2012 Mr Temper <MrTemper@CarolinaRollergirls.com>
 		
@@ -12,8 +12,10 @@
 		-->
 		<script type="text/javascript" src="/external/jquery/jquery.js"></script>
 		<script type="text/javascript" src="/json/core.js"></script>
-		<script type="text/javascript" src="plt-input.js"></script>
-		<script type="text/javascript" src="../lt/lt-sheet.js"></script>
+		<script type="text/javascript" src="/components/plt-input.js"></script>
+		<script type="text/javascript" src="/components/lt-sheet.js"></script>
+		<link rel="stylesheet" href="/components/plt-input.css" type="text/css" />
+		<link rel="stylesheet" href="/components/lt-sheet.css" type="text/css" />
 	</head>
 	<body>
 		<div id="input"></div>
