--- a/html/settings/twitter/auth.html
+++ b/html/settings/twitter/auth.html
@@ -20,7 +20,7 @@
 
 <center>
 <h2>Processing Twitter authorization, please wait...</h2>
-If you are not redirected, <a href="/controls/twitter.html">click here</a>
+If you are not redirected, <a href="/settings/twitter">click here</a>
 <br/>
 <a id="error"></a>
 </center>
