--- a/html/index.html
+++ b/html/index.html
@@ -81,14 +81,14 @@ function showOverlays() {
         <div class="btn">
           <h2><span class="fa fa-2x fa-gamepad"></span> OPERATOR &amp CONTROLS</h2>
           <ul>
-            <li><a href="controls/operator.html"><strong>Scoreboard Operator Panel</strong></a></li>
-            <li><a href="controls/mobile.html">Jam Timer (Mobile Control)</a></li>
+            <li><a href="nso/sbo"><strong>Scoreboard Operator Panel</strong></a></li>
+            <li><a href="nso/jt">Jam Timer (Mobile Control)</a></li>
           </ul>
         </div>
         <div class="btn">
           <h2><span class="fa fa-2x fa-desktop"></span> SCOREBOARD DISPLAY</h2>
           <ul>
-            <li><a href="views/standard/"><strong>Main Scoreboard</strong></a></li>
+            <li><a href="views/standard"><strong>Main Scoreboard</strong></a></li>
           </ul>
         </div>
     </div><!-- column -->
@@ -96,21 +96,21 @@ function showOverlays() {
         <div class="btn">
           <h2><span class="fa fa-2x fa-list-alt"></span> STATS TRACKING</h2>
           <ul>
-            <li><a href="controls/pt/">Penalty Tracking</a></li>
+            <li><a href="nso/pt">Penalty Tracking</a></li>
           </ul>
           <ul>
-            <li><a href="controls/lt/?team=1">Lineup Tracking (Team 1)</a></li>
-            <li><a href="controls/lt/?team=2">Lineup Tracking (Team 2)</a></li>
+            <li><a href="nso/lt?team=1">Lineup Tracking (Team 1)</a></li>
+            <li><a href="nso/lt?team=2">Lineup Tracking (Team 2)</a></li>
           </ul>
           <ul>
-            <li><a href="controls/plt/?team=1">Penalty + Lineup Tracking (Team 1)</a></li>
-            <li><a href="controls/plt/?team=2">Penalty + Lineup Tracking (Team 2)</a></li>
+            <li><a href="nso/plt?team=1">Penalty + Lineup Tracking (Team 1)</a></li>
+            <li><a href="nso/plt?team=2">Penalty + Lineup Tracking (Team 2)</a></li>
           </ul>
           <ul>
             <li><a href='views/wb'>Penalty Whiteboard Display</a></li>
           </ul>
           <ul>
-            <li><a href='views/copy.html'>Copy to Statsbook</a></li>
+            <li><a href='views/copy'>Copy to Statsbook</a></li>
           </ul>
         </div>
     </div><!-- column -->
@@ -118,17 +118,17 @@ function showOverlays() {
         <div class="btn">
           <h2><span class="fa fa-2x fa-video-camera"></span> BROADCAST OVERLAYS</h2>
           <ul>
-            <li><a href='views/overlays/interactive/index.html'>Broadcast Overlay</a></li>
-            <li><a href='views/overlays/interactive/admin.html'>Overlay Admin Page</a></li>
+            <li><a href='views/overlay'>Broadcast Overlay</a></li>
+            <li><a href='views/overlay/admin'>Overlay Admin Page</a></li>
           </ul>
         </div>
         <div class="btn">
           <h2><span class="fa fa-2x fa-cogs"></span> UTILITIES &amp; SETTINGS</h2>
           <ul>
-            <li><a href="controls/rulesets.html">Ruleset Editor</a></li>
-            <li><a href="controls/media_management.html">Media Management</a></li>
+            <li><a href="settings/rulesets">Ruleset Editor</a></li>
+            <li><a href="settings/data_management">Data Management (Up-/Download)</a></li>
             <li><a href="custom/">Custom Screens</a></li>
-            <li><a href="controls/twitter.html">Twitter Controls</a></li>
+            <li><a href="settings/twitter">Twitter Controls</a></li>
           </ul>
         </div>
       </div><!-- column -->
@@ -139,10 +139,6 @@ function showOverlays() {
               <p>To access this scoreboard from other computers on this network, try one of these URLs:</p>
 
               <ul id="URLs"></ul>
-              <p>
-                For info on using this scoreboard, contacting the developers, and/or modifying the scoreboard yourself,
-                see <a href="guide.html">the guide</a>.  For recent changes see the <a href="release.html">Release Notes</a>
-              </p>
             </div>
 
         </div>
@@ -156,8 +152,13 @@ function showOverlays() {
       <p>Version: <a id="version"></a></p>
     </center>
 
-<p><b>Scoreboard Wiki:</b></p>
-<p>Documentation for the getting the scoreboard installed and started quickly is available in the included README file. To check for the latest release of this software, please visit the <a href="https://github.com/rollerderby/scoreboard">project home on GitHub</a> and visit the <a href="https://github.com/rollerderby/scoreboard/wiki">project wiki</a> for all docs. The Derby Scoreboard <a href="https://www.facebook.com/groups/derbyscoreboard/">Facebook group</a> is very active and currently the best way to reach other users and developers.</p>
+    <p><b>Scoreboard Wiki:</b></p>
+    <p>Documentation for the getting the scoreboard installed and started quickly is available in the included README file.
+      To check for the latest release of this software, please visit the <a href="https://github.com/rollerderby/scoreboard">project
+      home on GitHub</a> and visit the <a href="https://github.com/rollerderby/scoreboard/wiki">project wiki</a> for all docs.
+      The Derby Scoreboard <a href="https://www.facebook.com/groups/derbyscoreboard/">Facebook group</a> is very active and
+      currently the best way to reach other users and developers.
+    </p>
 
   </div>
 
