--- a/html/nso/plt/index.html
+++ b/html/nso/plt/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 	<head>
-		<title>Penalty Tracker</title>
+		<title>Penalty Lineup Tracker</title>
 		<!--
 		 Copyright (C) 2008-2012 Mr Temper <MrTemper@CarolinaRollergirls.com>
 		
@@ -12,11 +12,15 @@
 		-->
 		<script type="text/javascript" src="/external/jquery/jquery.js"></script>
 		<script type="text/javascript" src="/json/core.js"></script>
-		<script type="text/javascript" src="/controls/plt/plt-input.js"></script>
+		<script type="text/javascript" src="/components/plt-input.js"></script>
+		<script type="text/javascript" src="/components//lt-sheet.js"></script>
+		<link rel="stylesheet" href="/components/plt-input.css" type="text/css" />
+		<link rel="stylesheet" href="/components/lt-sheet.css" type="text/css" />
 	</head>
 	<body>
-		<div id="pt1" style="width: 50%; vertical-align:top; display: inline-block"></div><!-- 
-	 --><div id="pt2" style="width: 50%; vertical-align:top; display: inline-block"></div>
+		<div id="input"></div>
+		<div id="sheet" width="100%"></div>
 		<div id="PenaltyEditor"></div>
+		<div id="FieldingEditor"></div>
 	</body>
 </html>
