--- a/html/nso/sbo/index.html
+++ b/html/nso/sbo/index.html
@@ -13,11 +13,11 @@
 <script type="text/javascript" src="/external/jquery/jquery.js"></script>
 <script type="text/javascript" src="/javascript/keycontrols.js"></script>
 <script type="text/javascript" src="/javascript/utils.js"></script>
-<script type="text/javascript" src="sk/sk-sheet.js"></script>
+<script type="text/javascript" src="/components/sk-sheet.js"></script>
 
 <script type="text/javascript" src="/json/core.js"></script>
 
-<link rel="stylesheet" href="sk/sk-sheet.css" type="text/css" />
+<link rel="stylesheet" href="/components/sk-sheet.css" type="text/css" />
 
 
 </head>
