--- a/html/nso/sbo/index.html
+++ b/html/nso/sbo/index.html
@@ -13,11 +13,20 @@
 <script type="text/javascript" src="/external/jquery/jquery.js"></script>
 <script type="text/javascript" src="/javascript/keycontrols.js"></script>
 <script type="text/javascript" src="/javascript/utils.js"></script>
-<script type="text/javascript" src="/components/sk-sheet.js"></script>
-
 <script type="text/javascript" src="/json/core.js"></script>
+<script type="text/javascript" src="/json/WSutils.js"></script>
+
+<script type="text/javascript" src="/components/sk-sheet.js"></script>
+<script type="text/javascript" src="/components/team-time-tab.js"></script>
+<script type="text/javascript" src="/components/view-tab.js"></script>
+<script type="text/javascript" src="/components/teams-tab.js"></script>
+<script type="text/javascript" src="/components/data-management-tab.js"></script>
 
 <link rel="stylesheet" href="/components/sk-sheet.css" type="text/css" />
+<link rel="stylesheet" href="/components/team-time-tab.css" type="text/css" />
+<link rel="stylesheet" href="/components/view-tab.css" type="text/css" />
+<link rel="stylesheet" href="/components/teams-tab.css" type="text/css" />
+<link rel="stylesheet" href="/components/data-management-tab.css" type="text/css" />
 
 
 </head>
