--- a/html/settings/rulesets/index.html
+++ b/html/settings/rulesets/index.html
@@ -1,47 +1,15 @@
 <!DOCTYPE html>
 <html>
 	<head>
-		<title>Rule Set Editor</title>
+		<title>Ruleset Editor</title>
 		<script type="text/javascript" src="/external/jquery/jquery.js"></script>
 		<script type="text/javascript" src="/json/core.js"></script>
+		<script type="text/javascript" src="/components/rulesets-tab.js"></script>
+
+		<link rel="stylesheet" href="/components/rulesets-tab.css" type="text/css" />
 	</head>
 	<body>
-		<div class="rulesets">
-			<h1>Rule Sets</h1>
-			<div></div>
-			<br /><br />
-			<table>
-				<tr>
-					<th colspan="2">New Ruleset</th>
-				</tr>
-				<tr>
-					<td>Name:</td>
-					<td><input type="text" id="new_name" /></td>
-				</tr>
-				<tr>
-					<td>Parent:</td>
-					<td><select id="new_parent"></select></td>
-				</tr>
-				<tr>
-					<td colspan="2">
-						<button class="New">Create</button>
-					</td>
-				</tr>
-			</table>
-		</div>
-		<div class="definitions">
-			<p>
-				<button class="Cancel">Cancel</button>
-				<button class="Update">Update</button>
-				<button class="Delete">Delete</button>
-			</p>
-			<input type="text" id="name" size="40" />
-			<div class="rules"></div>
-			<p>
-				<button class="Cancel">Cancel</button>
-				<button class="Update">Update</button>
-				<button class="Delete">Delete</button>
-			</p>
+		<div id="RulesetsTab">
 		</div>
 	</body>
 </html>
