Add standalone screens for Teams editor and scoreboard view editor

--- a/html/settings/rulesets/index.html
+++ b/html/settings/rulesets/index.html
@@ -9,7 +9,7 @@
 		<link rel="stylesheet" href="/components/rulesets-tab.css" type="text/css" />
 	</head>
 	<body>
-		<div id="RulesetsTab">
+		<div id="RulesetsTab" class="ui-widget">
 		</div>
 	</body>
 </html>
