--- a/html/index.html
+++ b/html/index.html
@@ -126,7 +126,7 @@ function showOverlays() {
           <h2><span class="fa fa-2x fa-cogs"></span> UTILITIES &amp; SETTINGS</h2>
           <ul>
             <li><a href="settings/rulesets">Ruleset Editor</a></li>
-            <li><a href="settings/view">ScoreBoard Settings</a></li>
+            <li><a href="settings/scoreboard">ScoreBoard Settings</a></li>
             <li><a href="settings/teams">Teams Editor</a></li>
             <li><a href="settings/data_management">Up- / Download</a></li>
             <li><a href="custom/">Custom Screens</a></li>
