Some minor fixes

--- a/html/index.html
+++ b/html/index.html
@@ -128,7 +128,7 @@ function showOverlays() {
             <li><a href="settings/rulesets">Ruleset Editor</a></li>
             <li><a href="settings/scoreboard">ScoreBoard Settings</a></li>
             <li><a href="settings/teams">Teams Editor</a></li>
-            <li><a href="settings/data_management">Up- / Download</a></li>
+            <li><a href="settings/data_management">Up / Download</a></li>
             <li><a href="custom/">Custom Screens</a></li>
             <li><a href="settings/twitter">Twitter Controls</a></li>
           </ul>
