--- a/html/settings/data_management/index.html
+++ b/html/settings/data_management/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html><head><title>CRG ScoreBoard: Up-/Download</title>
+<html><head><title>CRG ScoreBoard: Up/Download</title>
 
 <!--
  Copyright (C) 2008-2012 Mr Temper <MrTemper@CarolinaRollergirls.com>
