--- a/html/nso/sbo/index.html
+++ b/html/nso/sbo/index.html
@@ -37,7 +37,7 @@
 
 <div id="tabsDiv">
 	<div id="operatorIdDiv">Operator: <a id="operatorId"></a></div>
-	<a id="indexLink" href="../index.html">Back to index page</a>
+	<a id="indexLink" href="/">Back to index page</a>
 	<ul id="tabBar"></ul>
 </div>
 
