--- a/html/controls/plt/index.html
+++ b/html/controls/plt/index.html
@@ -19,6 +19,7 @@
 		<div id="input"></div>
 		<div id="sheet" width="100%"></div>
 		<div id="PenaltyEditor"></div>
+		<div id="AnnotationEditor"></div>
 		<div id="FieldingEditor"></div>
 	</body>
 </html>
