more review comments

--- a/html/controls/plt/index.html
+++ b/html/controls/plt/index.html
@@ -12,6 +12,7 @@
 		-->
 		<script type="text/javascript" src="/external/jquery/jquery.js"></script>
 		<script type="text/javascript" src="/json/core.js"></script>
+		<script type="text/javascript" src="/javascript/windowfunctions.js"></script>
 		<script type="text/javascript" src="plt-input.js"></script>
 		<script type="text/javascript" src="../lt/lt-sheet.js"></script>
 	</head>
