Add a dialog to select the team on (P)LT screens
Open the dialog if on loading no team is selected.

--- a/html/index.html
+++ b/html/index.html
@@ -99,12 +99,10 @@ function showOverlays() {
             <li><a href="nso/pt">Penalty Tracking</a></li>
           </ul>
           <ul>
-            <li><a href="nso/lt?team=1">Lineup Tracking (Team 1)</a></li>
-            <li><a href="nso/lt?team=2">Lineup Tracking (Team 2)</a></li>
+            <li><a href="nso/lt">Lineup Tracking</a></li>
           </ul>
           <ul>
-            <li><a href="nso/plt?team=1">Penalty + Lineup Tracking (Team 1)</a></li>
-            <li><a href="nso/plt?team=2">Penalty + Lineup Tracking (Team 2)</a></li>
+            <li><a href="nso/plt">Penalty + Lineup Tracking</a></li>
           </ul>
           <ul>
             <li><a href='views/wb'>Penalty Whiteboard Display</a></li>
