--- a/html/nso/lt/index.html
+++ b/html/nso/lt/index.html
@@ -24,5 +24,6 @@
 		<div id="PenaltyEditor"></div>
 		<div id="AnnotationEditor"></div>
 		<div id="FieldingEditor"></div>
+		<div id="OptionsDialog"></div>
 	</body>
 </html>
