Hook devices into WS, cleanup elsewhere.

--- a/html/index.html
+++ b/html/index.html
@@ -134,7 +134,7 @@ $(function() {
               <p>To access this scoreboard from other computers on this network, try one of these URLs:</p>
 
               <ul id="URLs"></ul>
-              <p>Client Name: <span sbContext="WS" sbDisplay="Name"></span></p>
+              <p>Device Name: <span sbContext="WS" sbDisplay="DeviceName"></span></p>
             </div>
         </div>
       </div><!-- column -->
