Use tbodies to make device list more readable

--- a/html/index.html
+++ b/html/index.html
@@ -124,7 +124,7 @@ $(function() {
             <li><a href="settings/data_management">Up / Download</a></li>
             <li><a href="custom/">Custom Screens</a></li>
             <li><a href="settings/twitter">Twitter Controls</a></li>
-            <li><a href="settings/clients">Clients</a></li>
+            <li><a href="settings/devices">Devices</a></li>
           </ul>
         </div>
       </div><!-- column -->
