--- a/html/settings/devices/index.html
+++ b/html/settings/devices/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 	<head>
-		<title>Clients</title>
+		<title>Devices</title>
 		<!--
 		 Copyright (C) 2008-2012 Mr Temper <MrTemper@CarolinaRollergirls.com>
 		
@@ -11,11 +11,19 @@
 		 See the file COPYING for details.
 		-->
 		<script type="text/javascript" src="/external/jquery/jquery.js"></script>
+		<script type="text/javascript" src="/javascript/windowfunctions.js"></script>
 		<script type="text/javascript" src="/json/core.js"></script>
 	</head>
 	<body>
-		<table id="devices">
-      <tr><th>Name</th><th>Clients</th></tr>
+		<table class="Devices">
+      <thead>
+        <tr>
+          <th>Name</th>
+          <th>Page</th>
+          <th>Address</th>
+          <th>Age</th>
+        </tr>
+      </thead>
     </table>
 	</body>
 </html>
