Track when clients last were seen.

--- a/html/settings/devices/index.html
+++ b/html/settings/devices/index.html
@@ -21,6 +21,7 @@
           <th>Name</th>
           <th>Page</th>
           <th>Address</th>
+          <th>Last Seen</th>
           <th>Age</th>
         </tr>
       </thead>
