Track when a device/client last did some form of write

--- a/html/index.html
+++ b/html/index.html
@@ -137,8 +137,8 @@ $(function() {
               <ul id="URLs"></ul>
               <p>Information about your device:
                 <ul>
-                  <li>Name: <span sbContext="WS" sbDisplay="DeviceName"></span></li>
-                  <li>Address: <span sbContext="WS" sbDisplay="ClientRemoteAddress"></span></li>
+                  <li>Name: <span sbContext="WS" sbDisplay="Device.Name"></span></li>
+                  <li>Address: <span sbContext="WS" sbDisplay="Client.RemoteAddress"></span></li>
                 </ul>
             </div>
         </div>
