--- a/html/settings/devices/index.html
+++ b/html/settings/devices/index.html
@@ -21,7 +21,8 @@
           <th>Name</th>
           <th>Page</th>
           <th>Address</th>
-          <th>Last Seen</th>
+          <th>Last<br/>Seen</th>
+          <th>Last<br/>Write</th>
           <th>Age</th>
         </tr>
       </thead>
