Add hardware information to devices page.

--- a/html/settings/devices/index.html
+++ b/html/settings/devices/index.html
@@ -20,6 +20,7 @@
         <tr>
           <th>Name</th>
           <th>Page</th>
+          <th>Hardware</th>
           <th>Address</th>
           <th>Last<br/>Seen</th>
           <th>Last<br/>Write</th>
