Let users put comments on devices

--- a/html/settings/devices/index.html
+++ b/html/settings/devices/index.html
@@ -18,13 +18,16 @@
 		<table class="Devices">
       <thead>
         <tr>
-          <th>Name</th>
+          <th rowspan=2>Name</th>
+          <th>Comment</th>
+          <th rowspan=2>Hardware</th>
+          <th rowspan=2>Address</th>
+          <th rowspan=2>Last<br/>Seen</th>
+          <th rowspan=2>Last<br/>Write</th>
+          <th rowspan=2>Age</th>
+        </tr>
+        <tr>
           <th>Page</th>
-          <th>Hardware</th>
-          <th>Address</th>
-          <th>Last<br/>Seen</th>
-          <th>Last<br/>Write</th>
-          <th>Age</th>
         </tr>
       </thead>
     </table>
