Show UA and custom indication when client isn't our WS.js

--- a/html/settings/devices/index.html
+++ b/html/settings/devices/index.html
@@ -20,7 +20,7 @@
         <tr>
           <th rowspan=2>Name</th>
           <th>Comment</th>
-          <th rowspan=2>Hardware</th>
+          <th rowspan=2>Platform</th>
           <th rowspan=2>Address</th>
           <th rowspan=2>Last<br/>Seen</th>
           <th rowspan=2>Last<br/>Write</th>
