--- a/html/settings/devices/index.html
+++ b/html/settings/devices/index.html
@@ -15,21 +15,24 @@
 		<script type="text/javascript" src="/json/core.js"></script>
 	</head>
 	<body>
+		<div class="Buttons"></div>
 		<table class="Devices">
-      <thead>
-        <tr>
-          <th rowspan=2>Name</th>
-          <th>Comment</th>
-          <th rowspan=2>Platform</th>
-          <th rowspan=2>Address</th>
-          <th rowspan=2>Last<br/>Seen</th>
-          <th rowspan=2>Last<br/>Write</th>
-          <th rowspan=2>Age</th>
-        </tr>
-        <tr>
-          <th>Page</th>
-        </tr>
-      </thead>
-    </table>
+			<thead>
+				<tr>
+					<th rowspan=2>Name</th>
+					<th>Comment</th>
+					<th rowspan=2>Platform</th>
+					<th rowspan=2>Address</th>
+					<th rowspan=2>Last<br/>Seen</th>
+					<th rowspan=2>Last<br/>Write</th>
+					<th rowspan=2>Age</th>
+				</tr>
+				<tr>
+					<th>Page</th>
+				</tr>
+			</thead>
+		</table>
+		<p>Devices such as tablets, laptops, and phones that have connected to the scoreboard recently.</p>
+		<p>Additional best effort information is provided to help you figure out which device is which.</p>
 	</body>
 </html>
