Simplify session handling a little.

--- a/html/settings/devices/index.html
+++ b/html/settings/devices/index.html
@@ -32,7 +32,6 @@
 				</tr>
 			</thead>
 		</table>
-		<p>Devices such as tablets, laptops, and phones that have connected to the scoreboard recently.</p>
-		<p>Additional best effort information is provided to help you figure out which device is which.</p>
+		<p>Page and Platform are provided by the client.</p>
 	</body>
 </html>
