--- a/html/settings/teams/index.html
+++ b/html/settings/teams/index.html
@@ -4,6 +4,7 @@
 		<title>Teams Editor</title>
 		<script type="text/javascript" src="/external/jquery/jquery.js"></script>
 		<script type="text/javascript" src="/json/core.js"></script>
+		<script type="text/javascript" src="/json/WSutils.js"></script>
 		<script type="text/javascript" src="/javascript/utils.js"></script>
 		<script type="text/javascript" src="/components/teams-tab.js"></script>
 
