Disable SBO Box buttons in LT mode
- Rename Setting from "Track Penalty Serving" to "CRG Tracks Lineups"
- When LT is disabled show a popup on (P)LT screen that allows enabling
it.

Closes #454

--- a/html/nso/lt/index.html
+++ b/html/nso/lt/index.html
@@ -25,5 +25,6 @@
 		<div id="AnnotationEditor"></div>
 		<div id="FieldingEditor"></div>
 		<div id="OptionsDialog"></div>
+		<div id="UseLTDialog"></div>
 	</body>
 </html>
