--- a/html/nso/plt/index.html
+++ b/html/nso/plt/index.html
@@ -25,5 +25,6 @@
 		<div id="AnnotationEditor"></div>
 		<div id="FieldingEditor"></div>
 		<div id="OptionsDialog"></div>
+		<div id="UseLTDialog"></div>
 	</body>
 </html>
