--- a/html/json/state.html
+++ b/html/json/state.html
@@ -1,6 +1,7 @@
 <html>
 	<head>
 		<script type="text/javascript" src="/external/jquery/jquery.js"></script>
+		<script type="text/javascript" src="/external/jquery/jquery-migrate-1.4.1.js"></script>
 		<script type="text/javascript" src="/json/core.js"></script>
 		<style> .Key { white-space: nowrap } </style>
 	</head>
