--- a/html/nso/jt/index.html
+++ b/html/nso/jt/index.html
@@ -14,10 +14,14 @@
 
 <script type="text/javascript" src="/external/jquery/jquery.js"></script>
 
-<script type="text/javascript" src="/json/core.js"></script>
+<script type="text/javascript" src="/json/WS.js"></script>
 
 <link rel="stylesheet" type="text/css" href="/external/jquery-mobile/jquery.mobile.css" />
 <script type="text/javascript" src="/external/jquery-mobile/jquery.mobile.js"></script>
+
+<script type="text/javascript" src="/javascript/timeconversions.js"></script>
+<link rel="stylesheet" type="text/css" href="index.css" />
+<script type="text/javascript" src="index.js"></script>
 
 
 </head>
@@ -39,7 +43,7 @@
 
 <div data-role="page" id="JamControlPage">
 	<div data-role="header">
-		<a href="#Main" data-direction="reverse" data-icon="arrow-l">Main</a>
+		<a href="#Main" data-direction="reverse" data-role="button" data-icon="ui-icon-arrow-l">Main</a>
 		<h1>Jam Control</h1>
 	</div>
 
@@ -56,10 +60,10 @@
 		<div class="TimeoutTime Time"><h2>TIMEOUT Time</h2><a class="Time" sbDisplay="Clock(Timeout).Time" sbModify="toTime"></a></div>
 		<div class="ui-grid-a">
 			<div class="ui-block-a">
-				<button class="StartJam" data-role="button" data-icon="check" data-iconpos="right"><span class="StartLabel Label">Start Jam</span></button>
+				<button class="StartJam" data-role="button"><span class="StartLabel Label">Start Jam</span></button>
 			</div>
 			<div class="ui-block-b">
-				<button class="StopJam" data-role="button" data-icon="delete" data-iconpos="left"><span class="StopLabel Label">Stop Jam/TO</span></button>
+				<button class="StopJam" data-role="button"><span class="StopLabel Label">Stop Jam/TO</span></button>
 			</div>
 		</div>
 		<button class="Timeout" data-role="button"><span class="TimeoutLabel Label">Timeout</span></button>
@@ -101,7 +105,7 @@
 
 <div data-role="page" id="PeriodTimePage">
 	<div data-role="header">
-		<a href="#Main" data-direction="reverse" data-icon="arrow-l">Main</a>
+		<a href="#Main" data-direction="reverse" data-role="button" data-icon="ui-icon-arrow-l">Main</a>
 		<h1>Period Time</h1>
 	</div>
 
