--- a/html/settings/devices/index.html
+++ b/html/settings/devices/index.html
@@ -11,6 +11,7 @@
 		 See the file COPYING for details.
 		-->
 		<script type="text/javascript" src="/external/jquery/jquery.js"></script>
+		<script type="text/javascript" src="/external/jquery/jquery-migrate.js"></script>
 		<script type="text/javascript" src="/javascript/windowfunctions.js"></script>
 		<script type="text/javascript" src="/json/core.js"></script>
 	</head>
