--- a/html/settings/devices/index.html
+++ b/html/settings/devices/index.html
@@ -11,16 +11,18 @@
 		 See the file COPYING for details.
 		-->
 		<script type="text/javascript" src="/external/jquery/jquery.js"></script>
-		<script type="text/javascript" src="/external/jquery/jquery-migrate.js"></script>
 		<script type="text/javascript" src="/javascript/windowfunctions.js"></script>
 		<script type="text/javascript" src="/json/core.js"></script>
+		<script type="text/javascript" src="/json/WSutils.js"></script>
 	</head>
 	<body>
-		<div class="Buttons"></div>
+		<div class="Buttons"></div><br>
+		<div id="writeAccess">Write access for new devices: </div>
 		<table class="Devices">
 			<thead>
 				<tr>
 					<th rowspan=2>Name</th>
+					<th rowspan=2>Access</th>
 					<th>Comment</th>
 					<th rowspan=2>Platform</th>
 					<th rowspan=2>Address</th>
