--- a/html/index.html
+++ b/html/index.html
@@ -138,6 +138,13 @@ $(function() {
       </div><!-- column -->
       <div class="column">
         <div class="btn" style="text-align: left;">
+          <h2><span class="fa fa-2x fa-info-circle"></span> DOCUMENTATION</h2>
+           	  <ul>
+           	    <li><a href="https://github.com/rollerderby/scoreboard/wiki/" target="_blank">Wiki</a> (most up-to-date; recommended when internet is reachable)
+           	    <li>Local <a href="documentation/wiki-snapshot.html" target="_blank">Wiki-Snapshot</a> (available without internet; taken when this version was released)
+           	  </ul>
+		</div>      
+        <div class="btn" style="text-align: left;">
           <h2><span class="fa fa-2x fa-info-circle"></span> INFO</h2>
             <div style="padding: 4px; font-size: 80%;">
               <p>To access this scoreboard from other computers on this network, try one of these URLs:</p>
@@ -160,12 +167,12 @@ $(function() {
       <p>Version: <a sbContext="ScoreBoard" sbDisplay="Version(release)"></a></p>
     </center>
 
-    <p><b>Scoreboard Wiki:</b></p>
-    <p>Documentation for the getting the scoreboard installed and started quickly is available in the included README file.
-      To check for the latest release of this software, please visit the <a href="https://github.com/rollerderby/scoreboard">project
-      home on GitHub</a> and visit the <a href="https://github.com/rollerderby/scoreboard/wiki">project wiki</a> for all docs.
-      The Derby Scoreboard <a href="https://www.facebook.com/groups/derbyscoreboard/">Facebook group</a> is very active and
-      currently the best way to reach other users and developers.
+    <p><b>Getting Help:</b></p>
+    <p>Documentation for getting the scoreboard installed is available in the included README file.
+      To check for the latest release of this software or report bugs or feature requests, please visit the
+      <a href="https://github.com/rollerderby/scoreboard/releases">project home on GitHub</a>. The Derby
+      Scoreboard <a href="https://www.facebook.com/groups/derbyscoreboard/">Facebook group</a> is very active and
+      currently the best way to reach other users and some developers.
     </p>
 
   </div>
