Add override to always allow localhost to write
enabled by default
closes #477

--- a/html/settings/devices/index.html
+++ b/html/settings/devices/index.html
@@ -17,7 +17,8 @@
 	</head>
 	<body>
 		<div class="Buttons"></div><br>
-		<div id="writeAccess">Write access for new devices: </div>
+		<div id="writeAccess">Write access for new devices: </div><br>
+		<div id="writeAccessLocal">Devices appearing to be on the computer running CRG: </div><br>
 		<table class="Devices">
 			<thead>
 				<tr>
